--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 <body>
 
   <div class="container">
-    <article>
+    <article class="main-img">
       <img src="/images/image-equilibrium.jpg" alt="">
+      <div class="overlay">
+        <img src="/images/icon-view.svg">
+      </div>
+
     </article>
 
     <article>
