--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <title>Frontend Mentor | NFT preview card component</title>
 
@@ -18,9 +18,9 @@
 
   <div class="container">
     <article class="main-img">
-      <img src="/images/image-equilibrium.jpg" alt="">
+      <img src="images/image-equilibrium.jpg" alt="">
       <div class="overlay">
-        <img src="/images/icon-view.svg">
+        <img src="images/icon-view.svg">
       </div>
 
     </article>
@@ -30,13 +30,13 @@
       <p>Our Equilibrium collection promotes balance and calm.</p>
 
       <ul>
-        <li><img src="/images/icon-ethereum.svg">0.041 ETH</li>
-        <li><img src="/images/icon-clock.svg">3 days left</li>
+        <li><img src="images/icon-ethereum.svg">0.041 ETH</li>
+        <li><img src="images/icon-clock.svg">3 days left</li>
       </ul>
     </article>
 
     <article class="avatar">
-      <img src="/images/image-avatar.png" alt="">
+      <img src="images/image-avatar.png" alt="">
       <p>Creation of <span>Jules Wyvern</span></p>
     </article>
     
